moved source files into new folder

--- a/source/extension.html
+++ b/source/extension.html
@@ -11,5 +11,6 @@
             <input id="toggle" type="checkbox">
             <span class="slider round"></span>
         </label>
+        <p>Report any issues <a target="_blank" href="https://github.com/redbackspider77/EmojiCopyExtension/issues/new">on the Github.</a></p>
     </body>
 </html>
