added leave a review button

--- a/source/extension.html
+++ b/source/extension.html
@@ -6,11 +6,18 @@
     </head>
     <body>
         <h1>Emoji Copy Extension</h1>
-        <p>Toggle below:</p>
+
+        <!-- <p>Toggle below:</p> -->
         <label class="switch">
             <input id="toggle" type="checkbox">
             <span class="slider round"></span>
         </label>
-        <p>Report any issues <a target="_blank" href="https://github.com/redbackspider77/EmojiCopyExtension/issues/new">on the Github.</a></p>
+
+        <div id="review-block">
+            <p id="like" class="pulse">Like the extension?</p>
+            <a target="_blank" href="https://chromewebstore.google.com/detail/emoji-copy-extension/nhkpcjdklcgchjejlnfdpgpcgmailpik#:~:text=Leave%20a%20review%20below%20if%20you%20like%20the%20extension%2C%20your%20feedback%20is%20really%20appreciated%21"><button id="review">Reviews are appreciated! 😊</button></a>
+        </div>
+
+        <p id="issues">Report any issues <a target="_blank" href="https://github.com/redbackspider77/EmojiCopyExtension/issues/new">on the Github</a>.</p>
     </body>
 </html>
